Booki Final Changes

--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -50,7 +50,9 @@ Final
             <div class="search-engine">
                 <form>
                     <div class="icon-wrapper">
-                        <i class="fa-solid fa-location-dot" style="color: black;"></i>
+                        <button class = "location-button">
+                            <i class="fa-solid fa-location-dot" style="color: black;"></i>
+                        </button>
                         <input type="text" placeholder="Marseille, France" id="web"/>
                     <input type="submit" value="Search" id = "search-engine"/>
                     <button class = "search-button">
